# AFG

./: .gitignore  COMPILER.md  Cargo.toml  README.md  instructions.md  shell.nix  test.json
.cargo/: .gitignore  config.toml
.github/: function_basic_blocks_graph.dot  machine_demo.tape
assets/maps/: level1.map.toml
assets/programs/: a.asmfg  fibonacci.afg  fibonacci.asmfg  move_and_turn.afg  move_and_turn.asmfg  new_turn.asmfg  program.afg  program.csai  test.afg  test.asmfg  turn.asmfg  turn.csasm
assets/programs/tests/: call_unknown_function.afg  fibo_mem.afg  fibo_mem.asmfg  fibonacci.asmfg  test_bad_arity.afg  test_function_call_negative_immediate.afg  test_function_call_negative_immediate.asmfg  test_stack.asmfg
compiler/: AFG.md  Cargo.toml  README.md  a.asmfg
compiler/src/: allocation.rs  bin.rs  error.rs  lib.rs  token.rs
compiler/src/ast/: function.rs  mod.rs  node.rs  parser.rs  tests.rs
compiler/src/error/: tests.rs  token.rs
compiler/src/lexer/: mod.rs  tests.rs  token.rs  utils.rs
compiler/src/liveness/: block.rs  mod.rs
compiler/src/pasm/: assignment.rs  instruction.rs  mod.rs  operand_type.rs  program.rs  tests.rs  translation.rs
compiler/src/semantic/: error.rs  mod.rs  utils.rs  validity.rs
compiler/src/token/: lexer.rs  mod.rs  tests.rs  token.rs  types.rs  utils.rs
compiler/tests/: integration_tests.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/map/: mod.rs  structures.rs
machine/: Cargo.toml  README.md
machine/src/: app.rs  bin.rs  components.rs  enums.rs  errors.rs  lib.rs  machine.rs  parser.rs  variables.rs
machine/src/blocks/: instruction_block.rs  machine_output.rs  machine_status.rs  mod.rs  register_block.rs  stack_block.rs
machine/src/components/: vm_meta.rs
machine/src/tests/: test_parser.rs
map_editor/: Cargo.toml
map_editor/src/: main.rs
src/: assets.rs  camera.rs  lib.rs  main.rs  map.rs  state.rs  virtual_machine.rs  vulkan.rs
src/debug/: events.rs  mod.rs  systems.rs
src/editor/: colors.rs  highlight.rs  mod.rs  system.rs
src/lang/: allocation.rs  asm.rs  block.rs  labels.rs  mod.rs  register.rs
src/lang/ast/: assignment.rs  block.rs  expression.rs  function.rs  identifier.rs  litteral.rs  mod.rs  node.rs  operator.rs  parser.rs  program.rs  statement.rs  test.rs  tests.rs  utils.rs
src/lang/ast2/: function.rs  mod.rs  node.rs
src/lang/liveness/: block.rs  mod.rs
src/lang/pasm/: mod.rs  program.rs  translation.rs
src/lang/semantic/: mod.rs
src/lang/token/: mod.rs  tests.rs  token.rs
src/map_format/: loader.rs  mod.rs
src/player/: components.rs  entities.rs  mod.rs  systems.rs  utils.rs
src/virtual_machine/: assets.rs  machine.rs  mod.rs  parser.rs
src/virtual_machine/tests/: test_parser.rs
