[package]
name = "AFG"
description = "Automated Fighting Game"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.15.1"
bevy_common_assets = { version = "0.12.0", features = ["toml"] }
bevy_rapier2d = { version = "0.28.0", features = ["simd-stable", "wasm-bindgen"] }
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"
