[package]
name = "afg"
description = "Automated Fighting Game"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.16.0"
bevy_common_assets = { version = "0.13.0", features = ["toml"] }
bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"
bevy_egui = "0.34.1"
afg-machine = { path = "machine", features = ["bevy"] }

[workspace]
members = ["compiler", "machine", "map_editor"]
resolver = "2"
