[package]
name = "afg-compiler"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
petgraph = "0.7.1"
afg-machine = { path = "../machine" }
colog = "1.3.0"
log = "0.4.25"
nom = "8.0.0"
nom_locate = "5.0.0"

[[bin]]
name = "compiler"
path = "src/bin.rs"

[lib]
name = "afgcompiler"
path = "src/lib.rs"
