[package]
name = "afg-core"
version = "0.1.0"
edition = "2021"
description = "Core types and structures for AFG (Automated Fighting Game)"

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
thiserror = "2.0"
