[package]
name = "afg-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.3", optional = true }
crossterm = { version = "0.28.1", optional = true }
ratatui = { version = "0.29.0", optional = true }
clap = { version = "4.5.26", features = ["derive"] }
thiserror = "2.0.11"
bevy = { version = "0.15.1", optional = true }
bevy_rapier2d = { version = "0.28.0", features = [
    "simd-stable",
    "wasm-bindgen",
], optional = true }
log = "0.4.25"
colog = "1.3.0"

[[bin]]
name = "machine-tester"
path = "src/bin.rs"
required-features = ["tui"]

[lib]
name = "machine"
path = "src/lib.rs"

[features]
bevy = ["dep:bevy", "dep:bevy_rapier2d"]
tui = ["dep:ratatui", "dep:color-eyre", "dep:crossterm"]
